syntax = "proto3";
package comdex.rewards.v1beta1;

import "gogoproto/gogo.proto";
import "comdex/rewards/v1beta1/params.proto";
import "comdex/rewards/v1beta1/rewards.proto";
import "comdex/rewards/v1beta1/epochs.proto";
import "comdex/rewards/v1beta1/gauge.proto";

option go_package = "github.com/comdex-official/comdex/x/rewards/types";

// GenesisState defines the rewards module's genesis state.
message GenesisState {
  repeated InternalRewards internal_rewards = 1 [
    (gogoproto.moretags) = "yaml:\"internal_rewards\"",
    (gogoproto.nullable) = false
  ];
  repeated LockerRewardsTracker locker_rewards_tracker = 2 [
    (gogoproto.moretags) = "yaml:\"locker_rewards_tracker\"",
    (gogoproto.nullable) = false
  ];
  repeated VaultInterestTracker vault_interest_tracker = 3 [
    (gogoproto.moretags) = "yaml:\"vault_interest_tracker\"",
    (gogoproto.nullable) = false
  ];
  repeated LockerExternalRewards locker_external_rewards = 4 [
    (gogoproto.moretags) = "yaml:\"locker_external_rewards\"",
    (gogoproto.nullable) = false
  ];
  repeated VaultExternalRewards vault_external_rewards = 5 [
    (gogoproto.moretags) = "yaml:\"vault_external_rewards\"",
    (gogoproto.nullable) = false
  ];
  repeated uint64 appIDs = 6 [
    (gogoproto.moretags) = "yaml:\"vault_external_rewards\""
  ];
  repeated EpochInfo epochInfo = 7 [
    (gogoproto.moretags) = "yaml:\"epochInfo\"",
    (gogoproto.nullable) = false
  ];
  repeated Gauge gauge = 8 [
    (gogoproto.moretags) = "yaml:\"gauge\"",
    (gogoproto.nullable) = false
  ];
  repeated GaugeByTriggerDuration gaugeByTriggerDuration = 9 [
    (gogoproto.moretags) = "yaml:\"gaugeByTriggerDuration\"",
    (gogoproto.nullable) = false
  ];
  Params params = 10 [
    (gogoproto.moretags) = "yaml:\"params\"",
    (gogoproto.nullable) = false
  ];
  repeated LendExternalRewards lendExternalRewards = 11 [
    (gogoproto.moretags) = "yaml:\"lendExternalRewards\"",
    (gogoproto.nullable) = false
  ];
}
