syntax = "proto3";
package comdex.rewards.v1beta1;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/comdex-official/comdex/x/rewards/types";

message Internal_rewards{
  uint64 app_mapping_ID = 1 [
    (gogoproto.customname) = "App_mapping_ID",
    (gogoproto.moretags) = "yaml:\"app_mapping_ID\""
  ];
  uint64 asset_ID = 2 [
    (gogoproto.customname) = "Asset_ID",
    (gogoproto.moretags) = "yaml:\"asset_ID\""
  ];
}

message Locker_rewards_tracker{
  uint64 locker_id = 1 [
    (gogoproto.moretags) = "yaml:\"locker_id\""
  ];
  uint64 app_mapping_id = 2 [
    (gogoproto.moretags) = "yaml:\"app_mapping_id\""
  ];
  string rewards_accumulated = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"rewards_accumulated\""
  ];
}

message Vault_interest_tracker{
  uint64 vault_id = 1 [
    (gogoproto.moretags) = "yaml:\"vault_id\""
  ];
  uint64 app_mapping_id = 2 [
    (gogoproto.moretags) = "yaml:\"app_mapping_id\""
  ];
  string interest_accumulated = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"interest_accumulated\""
  ];
}

message Locker_external_rewards{
  uint64 id = 1 [
    (gogoproto.moretags) = "yaml:\"id\""
  ];
  uint64 app_mapping_id = 2 [
    (gogoproto.moretags) = "yaml:\"app_mapping_id\""
  ];
  uint64 asset_id = 3 [
    (gogoproto.moretags) = "yaml:\"asset_id\""
  ];
  cosmos.base.v1beta1.Coin total_rewards = 4 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"total_rewards\"",
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];
  int64 duration_days = 5 [
    (gogoproto.moretags) = "yaml:\"duration_days\""
  ];
  bool is_active = 6 [
    (gogoproto.moretags) = "yaml:\"is_active\""
  ];
  cosmos.base.v1beta1.Coin available_rewards = 7 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"available_rewards\"",
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];
  string depositor = 8 [
    (gogoproto.moretags) = "yaml:\"depositor\""
  ];
  google.protobuf.Timestamp start_timestamp = 9 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true,
    (gogoproto.moretags) = "yaml:\"start_timestamp\""
  ];
  google.protobuf.Timestamp end_timestamp = 10 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true,
    (gogoproto.moretags) = "yaml:\"end_timestamp\""
  ];
  int64 min_lockup_time_seconds = 11 [
    (gogoproto.moretags) = "yaml:\"min_lockup_time_seconds\""
  ];
  uint64 epoch_id = 12 [
    (gogoproto.moretags) = "yaml:\"epoch_id\""
  ];
}

message Vault_external_rewards{
  uint64 id = 1 [
    (gogoproto.moretags) = "yaml:\"id\""
  ];
  uint64 app_mapping_id = 2 [
    (gogoproto.moretags) = "yaml:\"app_mapping_id\""
  ];
  uint64 extended_Pair_Id = 3 [
    (gogoproto.moretags) = "yaml:\"extended_Pair_Id\""
  ];
  cosmos.base.v1beta1.Coin total_rewards = 4 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"total_rewards\"",
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];
  int64 duration_days = 5 [
    (gogoproto.moretags) = "yaml:\"duration_days\""
  ];
  bool is_active = 6 [
    (gogoproto.moretags) = "yaml:\"is_active\""
  ];
  cosmos.base.v1beta1.Coin available_rewards = 7 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"available_rewards\"",
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];
  string depositor = 8 [
    (gogoproto.moretags) = "yaml:\"depositor\""
  ];
  google.protobuf.Timestamp start_timestamp = 9 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true,
    (gogoproto.moretags) = "yaml:\"start_timestamp\""
  ];
  google.protobuf.Timestamp end_timestamp = 10 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true,
    (gogoproto.moretags) = "yaml:\"end_timestamp\""
  ];
  int64 min_lockup_time_seconds = 11 [
    (gogoproto.moretags) = "yaml:\"min_lockup_time_seconds\""
  ];
  uint64 epoch_id = 12 [
    (gogoproto.moretags) = "yaml:\"epoch_id\""
  ];
}

message EpochTime{
  uint64 id = 1 [
    (gogoproto.moretags) = "yaml:\"id\""
  ];
  uint64 app_mapping_id = 2 [
    (gogoproto.moretags) = "yaml:\"app_mapping_id\""
  ];
  int64 starting_time = 3 [
    (gogoproto.moretags) = "yaml:\"time\""
  ];
  uint64 count = 4 [
    (gogoproto.moretags) = "yaml:\"count\""
  ];
}

message Lend_external_rewards{
  uint64 id = 1 [
    (gogoproto.moretags) = "yaml:\"id\""
  ];
  uint64 app_mapping_id = 2 [
    (gogoproto.moretags) = "yaml:\"app_mapping_id\""
  ];
  repeated Rewards_asset_pool_data rewards_asset_pool_data = 3 [
    (gogoproto.moretags) = "yaml:\"rewards_asset_pool_data\""
  ];
  cosmos.base.v1beta1.Coin total_rewards = 4 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"total_rewards\"",
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];
  uint64 reward_asset_id = 5 [
    (gogoproto.moretags) = "yaml:\"epoch_id\""
  ];
  int64 duration_days = 6 [
    (gogoproto.moretags) = "yaml:\"duration_days\""
  ];
  bool is_active = 7 [
    (gogoproto.moretags) = "yaml:\"is_active\""
  ];
  cosmos.base.v1beta1.Coin available_rewards = 8 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"available_rewards\"",
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];
  string depositor = 9 [
    (gogoproto.moretags) = "yaml:\"depositor\""
  ];
  google.protobuf.Timestamp start_timestamp = 10 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true,
    (gogoproto.moretags) = "yaml:\"start_timestamp\""
  ];
  google.protobuf.Timestamp end_timestamp = 11 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true,
    (gogoproto.moretags) = "yaml:\"end_timestamp\""
  ];
  int64 min_lockup_time_seconds = 12 [
    (gogoproto.moretags) = "yaml:\"min_lockup_time_seconds\""
  ];
  uint64 epoch_id = 13 [
    (gogoproto.moretags) = "yaml:\"epoch_id\""
  ];
}

message Rewards_asset_pool_data{
  uint64 c_pool_id = 1 [
    (gogoproto.moretags) = "yaml:\"c_pool_id\""
  ];
  repeated uint64 asset_id = 2 [
    (gogoproto.moretags) = "yaml:\"asset_id\""
  ];
}