syntax = "proto3";
package comdex.rewards.v1beta1;

import "gogoproto/gogo.proto";

option go_package = "github.com/comdex-official/comdex/x/rewards/types";

service Msg {
  rpc Whitelist(WhitelistAsset) returns (MsgWhitelistAssetResponse);
  rpc RemoveWhitelist(RemoveWhitelistAsset) returns (MsgRemoveWhitelistAssetResponse);
  rpc WhitelistAppVault(WhitelistAppIdVault) returns (MsgWhitelistAppIdVaultResponse);
  rpc RemoveWhitelistAppVault(RemoveWhitelistAppIdVault) returns (MsgRemoveWhitelistAppIdVaultResponse);
}

message WhitelistAsset {
  uint64 app_mapping_id   = 1 [
    (gogoproto.moretags) = "yaml:\"app_mapping_id\""
  ];

  string from    = 2 [
    (gogoproto.moretags) = "yaml:\"from\""
  ];

  repeated uint64 asset_id = 3 [
    (gogoproto.moretags) = "yaml:\"asset_id\""
  ];
}

message RemoveWhitelistAsset {
  uint64 app_mapping_id   = 1 [
    (gogoproto.moretags) = "yaml:\"app_mapping_id\""
  ];

  string from    = 2 [
    (gogoproto.moretags) = "yaml:\"from\""
  ];

  uint64 asset_id = 3 [
    (gogoproto.moretags) = "yaml:\"asset_id\""
  ];
}

message MsgWhitelistAssetResponse {}

message MsgRemoveWhitelistAssetResponse {}

message WhitelistAppIdVault {
  uint64 app_mapping_id   = 1 [
    (gogoproto.moretags) = "yaml:\"app_mapping_id_vault\""
  ];

  string from    = 2 [
    (gogoproto.moretags) = "yaml:\"from\""
  ];
}

message RemoveWhitelistAppIdVault {
  uint64 app_mapping_id   = 1 [
    (gogoproto.moretags) = "yaml:\"app_mapping_id_vault\""
  ];

  string from    = 2 [
    (gogoproto.moretags) = "yaml:\"from\""
  ];
}

message MsgWhitelistAppIdVaultResponse {}

message MsgRemoveWhitelistAppIdVaultResponse {}
